<resources>
    <string name="app_name">Netflex</string>
    <string name="home">Home</string>
    <string name="new_hot"><![CDATA[New & Hot]]></string>
    <string name="profile">Profile</string>
    <string name="netflex">NETFLEX</string>
    <string name="history">History</string>
    <string name="my_list">My List</string>
    <string name="no_actor_info">No information</string>
    <string name="rate">Rate</string>
    <string name="add_my_list">My List</string>
    <string name="actors">Actors</string>
    <string name="play_btn">▶ PLAY</string>
    <string name="episode_poster">Episode Poster</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="hide_trailer">Hide trailer</string>
    <string name="back">Back</string>
    <string name="poster">Poster</string>
    <string name="share">Share</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_info">Personal Information</string>
    <string name="username_hint">Username *</string>
    <string name="email_hint">Email *</string>
    <string name="phone_hint">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="profile_updated">Profile updated successfully!</string>
    <string name="username_required">Username is required.</string>
    <string name="username_max_length">Username cannot exceed 100 characters.</string>
    <string name="email_required">Email is required.</string>
    <string name="email_invalid">Invalid email address.</string>
    <string name="phone_invalid">Invalid phone number.</string>
    <string name="serie_poster">Serie Poster</string>
    <string name="filter">Filter</string>
    <string name="expore">Expore</string>
    <string name="film_poster">Film Poster</string>
    <string name="settings">Settings</string>
    <string name="comments">Comments</string>
    <string name="write_something">Write something...</string>
    <string name="comment">Comment</string>
    <string name="view_more">View more</string>
    <string name="no_comments">This film has no comments.</string>
    <string name="no_result_found">No result found</string>
    <string-array name="sort_options">
        <item>Mới nhất</item>
        <item>Cũ nhất</item>
    </string-array>

    <string name="poster_image">Poster Image</string>


    <!-- thêm các chuỗi khác nếu cần -->
</resources>