<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/expore" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="Favorite" />

    <item
        android:id="@+id/menu_History"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
<!--    <item-->
<!--        android:id="@+id/menu_profile"-->
<!--        android:icon="@drawable/ic_profile"-->
<!--        android:title="@string/profile" />-->
</menu>
